<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_last_read" />
    
    <LinearLayout android:id="@+id/spinners_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Spinner android:id="@+id/sura_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner android:id="@+id/ayah_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/buttons_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        
        <Button android:id="@+id/none_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />
        
        <Button android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>