<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quran_hdr"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    android:orientation="horizontal"
    android:background="@color/transparent" >
    
    <TextView android:id="@+id/section_month_index"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/hdr_text_color"
        android:textStyle="bold"
        android:background="@color/hdr_month_bg_color" />
    
    <TextView android:id="@+id/quran_hdr_daily_readings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAppearance="@style/qamar_hdr"
            android:text="@string/daily_readings" />

    <TextView android:id="@+id/quran_hdr_ayah_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center_vertical|right"
            android:textAppearance="@style/qamar_hdr"
            android:text="@string/ayah_count" />
    
    <TextView android:id="@+id/quran_hdr_extra_readings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textAppearance="@style/qamar_hdr"
            android:visibility="gone"
            android:text="@string/extra_readings" />
        
    <View android:id="@+id/quran_jump_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25" />
</LinearLayout>